Improve return types for ExprExpression, ExprChangeValue